Enable lomok by modifying compiling args
Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>